# rexglue-SoulCaliburIV

./: CMakeLists.txt  CMakePresets.json
cmake/: rexglue_helpers.cmake
include/rex/: runtime.h
include/rex/codegen/: manifest.h
include/rex/input/keyboard/: keyboard_input_driver.h
resources/templates/codegen/: init_cpp.inja
sciv/: CMakeLists.txt  CMakePresets.json  sciv_callbacks.toml  sciv_config.toml  sciv_fixups.toml  sciv_hooks.toml  sciv_manifest.toml  sciv_vtables.toml
sciv/resources/: sciv.rc.in
sciv/scripts/: gen_callback_funcs.py  gen_vtable_funcs.py
sciv/src/: main.cpp  sciv_app.h  sciv_crash.cpp  sciv_crash.h  sciv_hooks.cpp  sciv_screenshot.cpp  sciv_screenshot.h  sciv_settings.cpp  sciv_settings.h  sciv_timing.cpp  sciv_timing.h
src/codegen/: CMakeLists.txt  manifest.cpp
src/codegen/builders/: system.cpp
src/input/keyboard/: keyboard_input_driver.cpp
src/system/: CMakeLists.txt  runtime.cpp
src/system/xam/: content_manager.cpp
src/ui/: rex_app.cpp
tests/unit/: CMakeLists.txt
tests/unit/codegen/: manifest_test.cpp
